--- a/Hidden Search Widget/style.css
+++ b/Hidden Search Widget/style.css
@@ -24,7 +24,7 @@ body {
     padding: 15px;
     height: 50px;
     width: 50px;
-    transition: width 0.3s ease;
+    transition: width 0.3s ease-in;
 }
 .btn {
     background-color: #fff;
@@ -36,7 +36,7 @@ body {
     left: 0;
     height: 50px;
     width: 50px;
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease-in;
 }
 .btn:focus, .input:focus {
     outline: none;
