Feat: search projects by name

--- a/style.css
+++ b/style.css
@@ -218,6 +218,10 @@ html {
         width: 280px;
     }
 }
+/* Hide Card Class */
+.hide {
+    display: none;
+}
 
 /* Footer CSS */
 .ft-container {
