style: input and output text formatting

--- a/Hackerman/style.css
+++ b/Hackerman/style.css
@@ -93,8 +93,34 @@ body {
 }
 
 .terminal-text-wrap {
-    padding: 16px;
+    padding: 12px;
     max-height: 90%;
     overflow-y: auto;
     overflow-wrap: break-word;
+}
+.command-output {
+    margin-bottom: 12px;
+}
+.command-input {
+    width: 100%;
+    white-space: nowrap;
+}
+.commandLine {
+    display: inline-block;
+    width: fit-content;
+    white-space: nowrap;
+    color: green;
+}
+.commandField {
+    width: 81%;
+    font-size: 20px;
+    letter-spacing: 0.8px;
+    color: lightgreen;
+    background-color: #222735;
+    outline: transparent;
+    border: transparent;
+}
+.outputText {
+    color: lightgreen;
+    line-height: 1.4rem;
 }
