--- a/Dad Jokes/style.css
+++ b/Dad Jokes/style.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body {
     background-color: #686de0;
     font-family: Verdana, sans-serif;
@@ -14,7 +9,6 @@ body {
     overflow: hidden;
     padding: 20px;
 }
-
 .container {
     background-color: #fff;
     border-radius: 10px;
@@ -39,7 +33,8 @@ h3 {
 .btn {
     background-color: #9f68e0;
     color: #fff;
-    border: 0;
+    border: transparent;
+    outline: transparent;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
     padding: 14px 40px;
@@ -48,7 +43,4 @@ h3 {
 }
 .btn:active {
     transform: scale(0.98);
-}
-.btn:focus {
-    outline: 0;
 }
